<resources>
    <string name="app_name">TickShare</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Create an Account</string>
    <string name="textfieldWelcome"><b><i>Welcome to TickShare,\n thanks for using the App !</i></b></string>
    <string name="buttonLogout">logout</string>
    <string name="buttonChange_password">Change Password</string>
    <string name="buttonPlanYourTrip"><b><i>Plan your Trip</i></b> </string>
    <string name="buttonOfferATicket"><b><i>Offer a Ticket</i></b> </string>
    <string name="textfieldCreateAccount"><b><i>Create an Account</i></b></string>
    <string name="textfieldName">Name</string>
    <string name="textfieldLastName">Last Name</string>
    <string name="textfielRegion">Region</string>
    <string name="textfieldEmailAddress">Email Address</string>
    <string name="textfieldPassword">Password</string>
    <string name="textfieldConfirmPassword">Confirm Password</string>
    <string name="buttonNext">Next</string>
    <string name="buttonAlreadyRegistred">Already got an Account ? Click here to login !</string>
    <string name="textFieldLogin">Login</string>
    <string name="buttonBack">Back</string>
    <string name="textFieldPlanYourTrip"><b>Plan your Trip</b></string>
    <string name="textFieldWhereDoYouWantToStart">Where do you want to start ? </string>
    <string name="texfieldWhereDoYouWantToGo">Where dou you want to go ? </string>
    <string name="textFieldWhen">When do you want to go ? </string>
    <string name="buttonNow">Now</string>
    <string name="buttonDate">Date</string>
    <string name="buttonSearch">Search</string>
    <string name="textFieldOfferATrip"><b>Offer a Trip</b></string>
    <string name="textFieldwhereDoYouStart">Where do you start ? </string>
    <string name="textFieldwhenDoYouStart">When do you start ? </string>
    <string name="textFieldseatsLeft">How many seats do you have left ? </string>
    <string name="buttonOfferNow">Offer now </string>
    <string name="textFieldWhereDoyouWantToGo">Where do you want to go ? </string>
    <string name="hintEmailLogin">Your Email address</string>
    <string name="hintPassword">Password</string>
    <string name="buttonTime">Time</string>
    <string name="availableTrips">Available Trips</string>
    <string name="buttonAcceptTrip">Accept offer</string>
    <string name="buttonShowMap">Show Map</string>
</resources>
